# access_guard

./: .env.example  .gitignore  README.md  claude.md  docker-compose.yml
backend/: .coverage  .dockerignore  Dockerfile  coverage.xml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_identity.py  003_access.py  004_monitor.py  005_reports.py
backend/app/: celery_app.py  config.py  database.py  main.py
backend/app/core/: auth.py  deps.py  ldap_client.py  logging.py  security.py
backend/app/elastic/: client.py  indices.py  search.py
backend/app/kafka/: consumer.py  events.py  producer.py  runner.py  topics.py
backend/app/models/: access.py  admin.py  identity.py  monitor.py  reports.py
backend/app/modules/access/: consumer.py  router.py  schemas.py  service.py
backend/app/modules/identity/: consumer.py  router.py  schemas.py  service.py  tasks.py
backend/app/modules/monitor/: alert_service.py  audit_service.py  notification_service.py  router.py  rules.py  schemas.py  tasks.py
backend/app/modules/reports/: router.py  schemas.py  tasks.py
backend/app/modules/reports/generators/: base.py  collectors.py  renderers.py
backend/app/schemas/: auth.py
backend/scripts/: seed_data.py
backend/tests/: conftest.py
backend/tests/test_access/: test_roles.py
backend/tests/test_core/: test_core_auth_unit.py
backend/tests/test_identity/: test_auth.py  test_users.py
backend/tests/test_kafka/: test_events.py
backend/tests/test_monitor/: test_audit.py
backend/tests/test_reports/: test_reports.py
(+54 files in other folders)
