[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "accessguard"
version = "1.0.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "alembic/*",
    "app/core/ldap_client.py",
    "app/elastic/*",
    "app/kafka/consumer.py",
    "app/kafka/runner.py",
    "app/modules/access/consumer.py",
    "app/modules/identity/consumer.py",
    "app/modules/identity/tasks.py",
    "app/modules/monitor/rules.py",
    "app/modules/monitor/tasks.py",
    "app/modules/reports/generators/collectors.py",
    "app/modules/reports/tasks.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 70
